--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>My Test GitHub Project From GitBash</title>
+    <title>Mike's GitHub Project From GitBash</title>
     <meta charset="utf-8"/>
 </head>
 <body>
